Dodane funkcije za poganjanje pri večjih n

--- a/fp_projekt/finančni_praktikum.ipynb
+++ b/fp_projekt/finančni_praktikum.ipynb
@@ -475,6 +475,65 @@
     "Cas_max_razdalja.save('h')\n",
     "Cas_razmerje.save('i')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Podatki iz JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def rekonstruiraj_podatke(T, *d):\n",
+    "    p, M = T\n",
+    "    p = {Integer(k): v for k, v in p.items()}\n",
+    "    M = Matrix(M)\n",
+    "    d = [(v, c, E, Graph(G)) for v, c, E, G in d]\n",
+    "    for v, c, E, G in d:\n",
+    "        G._pos = p\n",
+    "    return ((p, M), *d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"poganjanje18-30.json\") as f:\n",
+    "    data = {Integer(n): rekonstruiraj_podatke(*d) for n, d in json.load(f).items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "v, c, E, G = data[18][1] # podatki za n = 18, max vsota\n",
+    "print(v, c, E)\n",
+    "G.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v, c, E, G = data[18][2] # podatki za n = 18, max min povezava\n",
+    "print(v, c, E)\n",
+    "G.plot()"
+   ]
   }
  ],
  "metadata": {
